2016-11-30  Janus Weil  <janus@gcc.gnu.org>

PR fortran/78592
	* interface.c (gfc_find_specific_dtio_proc): Rearrange code to avoid
	dereferencing a null pointer.

2016-11-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/78592
	* gfortran.dg/dtio_18.f90: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@243005 138bc75d-0d04-0410-961f-82ee72b054a4